--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <div class="logo"><img src="anispi1.jpg" alt="LOGO" width="200px" height="200px"></div>
+    <div class="logo"><img src="/foi/anispi1.jpg" alt="LOGO" width="200px" height="200px"></div>
     <nav>
         
         <ul>
